--- a/edusity/src/Components/Testimonials/Testimonials.css
+++ b/edusity/src/Components/Testimonials/Testimonials.css
@@ -1,4 +1,4 @@
-.testimonials{
+.testimonilas{
     margin: 80px auto;
     padding: 0 80px;
     position: relative;
@@ -8,6 +8,7 @@
     position: absolute;
     top: 50%;
     right: 0;
+    bottom: 0;
     transform: translateY(-50%);
     padding: 15px;
     width: 50px;
@@ -30,6 +31,7 @@
     width: 200%;
     overflow-x: hidden;
     transition: 0.5s;
+    transform: translateX(-25%);
 }
 
 .slider ul li{
@@ -51,4 +53,15 @@
     border-radius: 50%;
     margin-right: 10px;
     border: 4px solid #212EA0;
+}
+
+.user-info{
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+    font-size: 15px;
+}
+
+.user-info h3{
+    color: #212EA0; 
 }
